# genetic_branching

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  generate.sh
observer_generation/: Makefile  template.cpp
python/: ClassicSolverCustomBranching.py  component.py  ea.py  evaluate.py  functor_observer.py  gb_scip_solver.py  generator.py  khalil.py  khalil_train.py  observation.py  observer.py  train.py  utils.py
src/: ArrayView.cpp  ArrayView.h  DynamicFeaturesObs.cpp  DynamicFeaturesObs.h  Obs.cpp  Obs.h  StaticFeaturesObs.cpp  StaticFeaturesObs.h  TreeFeaturesObs.cpp  TreeFeaturesObs.h  my_module.cpp  statistics.cpp  statistics.h  utils.cpp  utils.h
